# GarbageCollector

./: CMakeLists.txt  main  main.cpp  makefile
collections/: DynamicArray.h  ElementUp.h  LinkedList.h
hash/: HashMap.h  HashUtil.h  Pair.h
memory/: GarbageCollector.h  GarbageCollector_t.h  Graph.h
pointer/: ShrdPtr.h  UnqPtr.h  WeakPtr.h
test/: Functional_testsGC.cpp  Functional_testsGC.h  Load_testsGC.cpp  Load_testsGC.h  TestGarbageCollector.cpp  TestGarbageCollector.h
